tests/js/valid/list/type-declaration.buri
words: [Str] = ["hello", "world"]

Nums = [Int]
nums: Nums = [1, 2, 3]

Matrix = [[Int]]
matrix: Matrix = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]