tests/js/invalid/list/append-0.buri
item = [0, 1, 2, 3, 4]:append("3")